# food_order_app

./: README.md  example.py  exceptions.py  main.py  pyproject.toml
db/: session.py
db/mixins/: crud_mixin.py
db/models/: food.py  order.py  user.py
db/settings/: main.py
db/utils/: enums.py  utils.py
q_tasks/: celery_main.py  tasks.py
q_tasks/settings/: main.py
routers/: dish_tasks.py  dishes.py  ingredients.py  orders.py  user.py  utils.py
routers/auth/: hashing.py  utils.py
routers/settings/: main.py
schemas/: food.py  order.py  user.py
