[tool.poetry]
name = "food-order-app"
version = "0.1.0"
description = ""
authors = ["spacecat1717 <manyam245@gmail.com>"]
readme = "README.md"
packages = [{include = "food_order_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
